2019-08-09  Karl Berry  <karl@freefriends.org>

	* tex.ch (53.1374): only log \openout files if the log_openout
	config value is true. Report from David Fuchs.
	* cpascal.h (texmfyes): #define texmf_yesno, for web visibility.
	* triptest.test: no need to remove \openout lines since they are
	no longer written.
	* triptrap/trip.diffs: update.

2019-08-06  Karl Berry  <karl@freefriends.org>

	* texmfmp-help.h (ALEPHHELP, EPTEXHELP, ETEXHELP, EUPTEXHELP,
	MFHELP, PDFTEXHELP, PTEXHELP, TEXHELP, UPTEXHELP, XETEXHELP):
	add -cnf-line. (I.e., everything but the lua-based engines,
	as they do not share the common source.)

2019-08-04  Karl Berry  <karl@freefriends.org>

	* doc/web2c.texi (Shell escapes): default value no longer as stated.

2019-07-19  Karl Berry  <karl@tug.org>

	* patgen.ch: mention adding swap/zram to deal with larger tries.

2019-07-10  Karl Berry  <karl@freefriends.org>

	* patgen.ch (trie_size),
	(triec_size): reduce again to 76,000,000 and 38,000,000,
	per Johannes Hielscher, 10 Jul 2019 00:00:03.

2019-06-26  Karl Berry  <karl@freefriends.org>

	* configure.ac (KPSE_ICU_FLAGS, KPSE_GRAPHITE2_FLAGS) [xetex],
	(KPSE_HARFBUZZ_FLAGS) [xetex || luatex[53]]: make test conditional.

2019-05-29  Andreas Scherer  <https://ascherer.github.io>

	* cwebboot.cin: Rebuild after recent changes.

2019-05-23  Karl Berry  <karl@tug.org>

	* patgen.ch (trie_size),
	(triec_size): reduce to 100000000/50000000 to avoid
	the same linking problems on netbsd. We'll see.

2019-05-18  Karl Berry  <karl@freefriends.org>

	* patgen.ch (trie_size),
	(triec_size): increase to maximum values 110021182 and 55000006
	as reported by Keno Wehr,
	(print_real calls): reorder parentheses to avoid overflow.
	https://tug.org/pipermail/tex-live/2019-May/043679.html.

2019-05-08  Akira Kakuto  <kakuto@w32tex.org>

	* texmfmp.h: Define a new function find_input_file(integer s).
	A report in tex-k list:
	https://tug.org/pipermail/tex-k/2019-May/003014.html
