@@ -1,3 +1,10 @@
+2019-09-23  Karl Berry  <karl@freefriends.org>
+
+	* patgen.ch (trie_size),
+	(triec_size): reduce again, back to the original values,
+	10,000,000 and 5,000,000. A sad story.
+	Report from Mojca, 23 Sep 2019 21:21:42.
+
 2019-08-09  Karl Berry  <karl@freefriends.org>
 
 	* tex.ch (53.1374): only log \openout files if the log_openout
